--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "web": "node server.js"
   },
   "eslintConfig": {
     "extends": [
